--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="Vlog of Veb-developing" />
+    <link rel="stylesheet" href="/vlog/src/webfonts/web-fonts">
     <meta
       name="description"
       content="Vlog of Veb-developing"
